# better_vpn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/backend/: Cargo.toml
crates/backend/src/: app_config.rs  auth.rs  cert.rs  grpc.rs  login_throttle.rs  main.rs  managed.rs  settings.rs  state.rs  sysmon.rs
crates/backend/src/config/: manager.rs  mod.rs  model.rs
crates/backend/src/hysteria/: auth.rs  client.rs  core.rs  mod.rs  stats.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  token.rs
crates/console/: Cargo.toml
crates/console/src/: ctx.rs  fmt.rs  main.rs  token_store.rs  ui.rs
crates/console/src/pages/: cert.rs  config.rs  core.rs  mod.rs  settings.rs  stats.rs  users.rs
crates/db/: Cargo.toml
crates/db/migrations/2026-01-01-000000_init/: down.sql  up.sql
crates/db/migrations/2026-07-02-000000_drop_admins/: down.sql  up.sql
crates/db/migrations/2026-07-03-000000_drop_online_state/: down.sql  up.sql
crates/db/src/: lib.rs  models.rs  queries.rs  schema.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: buf.yaml  panel.proto
crates/proto/src/: lib.rs
deploy/: Caddyfile  config.example.yaml  hysteria.service  panel.env.example  polkit-better-vpn.rules  vpn-panel.service
mobile/: .gitignore  app.json  buf.gen.yaml  eslint.config.js  package-lock.json  package.json  pnpm-workspace.yaml
mobile/plugins/: with-arm64-only.js  with-cleartext-traffic.js  with-release-signing.js
mobile/src/: polyfills.ts
mobile/src/api/: client.tsx  servers.tsx
mobile/src/app/: _layout.tsx  config-yaml.tsx  servers.tsx
mobile/src/app/(tabs)/: _layout.tsx  index.tsx  server.tsx  settings.tsx  users.tsx
mobile/src/app/user/: new.tsx
mobile/src/app/user/[id]/: edit.tsx  index.tsx  share.tsx
mobile/src/components/: reveal.tsx  screen.tsx  servers-screen.tsx  skeleton.tsx  sparkline.tsx  stat-tile.tsx  user-form-fields.tsx
mobile/src/lib/: format.ts  quota.ts  theme.ts  use-app-active.ts
web/: buf.gen.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
web/scripts/: stream-churn-repro.mjs
web/src/: App.tsx  api.ts  index.css  main.tsx
web/src/components/: AsyncActionButton.tsx  Logo.tsx  RestartCoreButton.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Topbar.tsx  UpdateCoreButton.tsx  nav.ts
web/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  skeleton.tsx  spinner.tsx  switch.tsx  table.tsx  textarea.tsx
web/src/lib/: utils.ts
web/src/pages/: Config.tsx  Login.tsx  Settings.tsx  Stats.tsx  Users.tsx
