[package]
name = "vpn-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vpn-backend"
path = "src/main.rs"

[dependencies]
vpn-proto.workspace = true
vpn-common.workspace = true
vpn-db.workspace = true

tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true

diesel.workspace = true
chrono.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true

clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
sha2.workspace = true
base64.workspace = true
qrcode.workspace = true
percent-encoding.workspace = true
rcgen.workspace = true
x509-parser.workspace = true
time.workspace = true
sysinfo.workspace = true
