[package]
name = "vpn-console"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vpnctl"
path = "src/main.rs"

[dependencies]
vpn-proto.workspace = true

tonic.workspace = true
prost.workspace = true
tokio.workspace = true

dialoguer.workspace = true
console.workspace = true
qrcode.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
