[package]
name = "vpn-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
diesel.workspace = true
diesel_migrations.workspace = true
libsqlite3-sys.workspace = true
r2d2.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
